--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </details>
                 </details-modal>
                 <a href="#" class="header__heading-link link link--text focus-inset">
-                    <img src="https://iili.io/JYygIv2.png" alt="logo-Klik4d" height="54" width="auto">
+                    <img src="https://i.imgur.com/JwgAwwn.png" alt="logo-Klik4d" height="54" width="auto">
                 </a>
                 <nav class="header__inline-menu">
                     <ul class="list-menu list-menu--inline" role="list">
