--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                                         </div>
                                         <div class="product__description rte quick-add-hidden">
                                         <p>
-                                        <a href="https://khususdaftar.com/login/ckg" title="Slot Online">
+                                        <a href="https://ake5.short.gy/klik4d" title="Slot Online">
                                                 <img alt="Slot Online" src="https://cunori.edu.gt/campus/app/upload/users/1/17730/my_files/content-images/daftar-login-slot-gacor.webp?q=AREA188" style="display: block; margin-left: auto; margin-right: auto;">
                                                 </a>
                                                 </p>
